# xtrooder

./: .gitignore  Cargo.toml  LICENSE  README.md  openocd.gdb  rust-toolchain.toml
.cargo/: config.toml
board/: Cargo.toml  rust-toolchain.toml
board/.cargo/: config.toml
board/app/: Cargo.toml  build.rs
board/app/config/: config.toml
board/app/examples/: endstop.rs  example.rs  heated_bed.rs  hotend.rs  multiprio.rs  spi.rs  stepper.rs  thermistor.rs  uart_dma.rs  z_calibration.rs
board/app/src/: config.rs  ext.rs  lib.rs  main.rs
cross/: Cargo.toml  memory.x  rust-toolchain.toml  stm32h753.svd
cross/.cargo/: config.toml
cross/app/: Cargo.toml  build.rs  config.rs.template
cross/app/config/: config.toml
cross/app/examples/: hotend.rs  sdmmc.rs  spi.rs  stepper.rs  thermistor.rs  uart_dma.rs
cross/app/src/: config.rs  lib.rs  main.rs
cross/app/src/fan/: mod.rs
cross/app/src/hotend/: controller.rs  heater.rs  mod.rs  thermistor.rs
cross/app/src/planner/: mod.rs  motion.rs  planner.rs  test.rs
cross/app/src/sdcard/: mod.rs
cross/app/src/stepper/: a4988.rs  mod.rs
cross/app/src/utils/: stopwatch.rs
cross/fs/: Cargo.toml
cross/fs/src/: blockdevice.rs  lib.rs  structure.rs  volume_mgr.rs
cross/fs/src/fat/: bpb.rs  info.rs  mod.rs  ondiskdirentry.rs  volume.rs
cross/fs/src/filesystem/: directory.rs  filename.rs  files.rs  mod.rs
cross/motion/: Cargo.toml
cross/motion/src/: lib.rs
cross/stepper/: Cargo.toml
cross/stepper/src/: lib.rs
docs/: tasks_workflow.excalidraw  tasks_workshow_2.excalidraw
host/: Cargo.toml
host/common/src/: lib.rs
host/fan/: Cargo.toml
host/fan/src/: lib.rs
host/fs/: Cargo.toml
host/fs/src/: blockdevice.rs  lib.rs  volume_mgr.rs
host/fs/src/fat/: bpb.rs  mod.rs  volume.rs
host/fs/src/filesystem/: directory.rs  filename.rs  files.rs  mod.rs
host/fs/tests/: directories.rs  linuxdevice.rs  open_files.rs  read_file.rs  volume.rs  write_file.rs
host/fs/tests/utils/: mod.rs
host/hotend/: Cargo.toml
host/hotend/src/: controller.rs  heater.rs  lib.rs  thermistor.rs
host/math/: Cargo.toml
host/math/src/: angle.rs  common.rs  computable.rs  distance.rs  duration.rs  lib.rs  pid.rs  resistance.rs  speed.rs  temperature.rs  vector.rs
host/parser/: Cargo.toml
host/parser/src/: at.rs  gcode.rs  lib.rs  parser.rs
host/stepper/: Cargo.toml
host/stepper/src/: lib.rs  motion.rs  planner.rs  stepper.rs
host/thermal_actuator/: Cargo.toml
host/thermal_actuator/src/: controller.rs  heater.rs  lib.rs  thermistor.rs
host/tools/: Cargo.toml
host/tools/assets/: example1.txt
host/tools/examples/: example1.txt
host/tools/src/: main.rs
printer/: Cargo.toml
src/: main.rs
src/hotend/: controller.rs  heater.rs  mod.rs  test.rs  thermistor.rs
src/math/: angle.rs  common.rs  computable.rs  distance.rs  measurable.rs  mod.rs  speed.rs  vector.rs
src/motion/: motion.rs
src/parser/: mod.rs  parser.rs  test.rs
src/planner/: math.rs  mod.rs  motion.rs  planner.rs  test.rs
src/stepper/: a4988.rs  math.rs  mod.rs  motion.rs  stepper.rs  test.rs  units.rs
stepper/: Cargo.toml
stepper/src/: lib.rs  main.rs  stepper.rs
