[package]
name = "printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.12"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
embedded-hal = "0.2.6"
nb = "1.0.0"
stm32h7xx-hal = { version="0.10.0", features=["stm32h753"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

stepper = { path = "./stepper"}

[profile.dev]
debug = true

[profile.release]
debug = true