[package]
name = "printer"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-sync = { version = "0", features = ["defmt"] }
embassy-executor = { version = "0",  features = ["nightly", "defmt", "integrated-timers", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-embedded-hal = { version = "0" }
embassy-stm32 = { version = "0", features =  ["nightly", "defmt", "unstable-pac", "stm32h753zi", "time-driver-any", "memory-x"]   }

defmt = "0"
defmt-rtt = "0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }

micromath = "2.0.0"


[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "36ff688"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "36ff688"}
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "36ff688"}
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "36ff688"}
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "36ff688"}