[package]
edition = "2021"
name = "app"
version = "0.1.0"

[dependencies]
embassy-stm32 = { version = "0.1.0", git="https://github.com/embassy-rs/embassy", features = ["defmt", "stm32h753zi", "time-driver-tim1", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-sync = { version = "0.6.0", git="https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-embedded-hal = { version = "0.2.0", git="https://github.com/embassy-rs/embassy" }
embassy-executor = { version = "0.6.0", git="https://github.com/embassy-rs/embassy", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", git="https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.0", git="https://github.com/embassy-rs/embassy" }

defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-nal-async = { version = "0.8.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
critical-section = "1.1"
micromath = "2.0.0"
stm32-fmc = "0.3.0"
embedded-storage = "0.3.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false }
pid-lite = {version="1.2.0", default-features = false}

math = {path="../../host/math", features=["defmt-log"]}
parser = {path="../../host/parser", features=["defmt-log"]}
stepper = {path="../../host/stepper"}
embedded-sdmmc = {version="0.8.0", default-features=false}

[build-dependencies]
serde = "1.0.214"
confy = "0.6.1"
serde_derive = "1.0.214"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.87"
math = {path="../../host/math", features=["defmt-log"]}
stepper = {path="../../host/stepper"}

[lib]
harness = false
