[package]
edition = "2021"
name = "motion"
version = "0.1.0"

[dependencies]
embassy-stm32 = { version = "0.1.0", git="https://github.com/embassy-rs/embassy", features = ["defmt", "stm32h753zi", "time-driver-any", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-time = { version = "0.3.0", git="https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
defmt = "0.3"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
micromath = "2.0.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }

math = {path="../../host/math"}
stepper = {path="../stepper"}

[dev-dependencies]
defmt-test = "0.3.2"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stepper = {path="../stepper", features = ["mock"]}

[lib]
harness = false
