[package]
name = "hotend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pid-lite = {version="1.2.0", default-features = false}
math = { path = "../math" }
common = { path = "../common" }

[dev-dependencies]
approx = {version="0.5.1"}
