[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath="2.0.0"
heapless = { version = "0.8", default-features = false }
defmt = {version="0.3", optional=true}
measurements = {version="0.11.0", default-features=false}

[dev-dependencies]
assert_float_eq = "1.1.3"

[features]
default = []
defmt-log = ["dep:defmt"]
