[package]
name = "thermal_actuator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = { path = "../math" }
common = { path = "../common" }

[dev-dependencies]
approx = {version="0.5.1"}
tokio = {version= "1.37.0", features = ["full"]}
